--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyHobby">
-        <activity android:name=".view.MainActivity" />
 
-        <activity android:name=".view.Logo">
+        android:theme="@style/Theme.MyHobby">
+        <activity android:name=".view.MainActivity"
+            android:screenOrientation="portrait"/>
+
+
+        <activity android:name=".view.Logo"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
