--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyHobby">
-        <activity android:name=".hobby_list_board"></activity>
+        <activity android:name=".Hobby_list_board"></activity>
         <activity
             android:name=".view.MainActivity"
             android:screenOrientation="portrait" />
